# big-cycle-investing

./: .gitignore  .worktreeinclude  CLAUDE.md  pyproject.toml
.claude/: review-state.json  settings.json
.claude/agents/: coding-agent.md  review-adversarial.md  review-ai-workflow.md  review-dalio.md  review-data-quality.md  review-meta.md  review-pr.md  review-practitioner.md  testing-agent.md
.claude/commands/: create-spec.md  review-adversarial.md  review-ai-workflow.md  review-cycle.md  review-dalio.md  review-meta.md  (+3 more)
configs/: series.yaml  series_uk.yaml
data/: manifest.json  manifest_uk.json
docs/: review_agent_prompt.md
notebooks/: 01_data_exploration.ipynb  02_civilizational_indicators.ipynb  03_backtest.ipynb  04_uk_sterling_transition.ipynb
reviews/: 2026-04-15-adversarial.md  2026-04-15-ai-workflow.md  2026-04-15-dalio.md  2026-04-15-data-quality.md  2026-04-15-practitioner.md  2026-04-15.md  README.md
scripts/: civilizational_component_decomposition.py  civilizational_composite_diagnostic.py  compare_regime_strategies.py  fetch_data.py  fetch_uk_data.py  validate_bond_returns.py  validate_gold_splice.py  validate_lbma_gold.py
specs/: backtester.md  indicator_framework.md  testing_and_ci.md
src/: backtester.py  data_fetcher.py  data_fetcher_uk.py  indicators.py
tests/: conftest.py  test_asset_return_invariants.py  test_bond_splicing.py  test_civilizational_indicators.py  test_data_quality.py  test_nonsovereign_base.py  test_proxy_splicing.py  test_publication_lag.py  test_regime_scoring.py  test_transaction_costs.py  test_uk_data_fetcher.py
(+31 files in other folders)
