[project]
name = "big-cycle-investing"
version = "0.1.0"
description = "Long-view macro wealth-preservation strategy research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "fredapi>=0.5",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "jupyter>=1.0",
    "nbformat>=5.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.pytest.ini_options]
markers = [
  "unit: synthetic fixtures only; runs in worktrees and CI",
  "integration: uses real data/raw/ parquet cache; local only, skips if absent",
  "spec: directly verifies an invariant listed in docs/specs/*.md",
]
testpaths = ["tests"]
# Fail the run if any test uses an unregistered marker.
# Combined with the collection check above, forces marker discipline.
addopts = ["--strict-markers"]
